--- a/add.html
+++ b/add.html
@@ -1,27 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Add Product - ConceptDash</title>
-
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
-</head>
 <body class="bg-gray-100 px-4 py-8">
   <div class="max-w-2xl mx-auto bg-white p-6 rounded-xl shadow">
-    <h1 class="text-2xl font-bold mb-6 text-primary">📦 Add Product</h1>
+    <div class="flex justify-between items-center mb-6">
+      <h1 class="text-2xl font-bold text-primary">📦 Add Product</h1>
+      <div class="space-x-2">
+        <button id="manageBrandsBtn" class="bg-blue-500 hover:bg-blue-600 text-white px-3 py-1 rounded-lg text-sm">
+          Manage Brands
+        </button>
+        <a href="edit-products.html" class="bg-yellow-500 hover:bg-yellow-600 text-white px-3 py-1 rounded-lg text-sm">
+          Edit Products
+        </a>
+      </div>
+    </div>
 
     <form id="productForm" class="space-y-4">
-      <!-- Basic Info -->
+      <!-- Inputs unchanged -->
       <input type="text" id="name" placeholder="Product Name" required class="w-full border px-3 py-2 rounded" />
       <textarea id="description" placeholder="Short Description" class="w-full border px-3 py-2 rounded"></textarea>
       <input type="number" id="price" placeholder="Price (Ksh)" required class="w-full border px-3 py-2 rounded" />
-      
+
       <!-- Category -->
       <label class="block font-semibold">Category</label>
       <select id="category" class="w-full border px-3 py-2 rounded" required>
@@ -40,24 +36,9 @@
 
       <!-- Brand -->
       <label class="block font-semibold">Brand</label>
-      <select id="brand" class="w-full border px-3 py-2 rounded">
-        <option value="">Select Brand</option>
-        <option>Apple</option>
-        <option>Samsung</option>
-        <option>Infinix</option>
-        <option>HP</option>
-        <option>Dell</option>
-        <option>Tecno</option>
-        <option>Lenovo</option>
-        <option>Sony</option>
-        <option>LG</option>
-        <option>Huawei</option>
-        <option>Nokia</option>
-        <option>Asus</option>
-        <option>Other</option>
-      </select>
+      <select id="brand" class="w-full border px-3 py-2 rounded"></select>
 
-      <!-- Condition -->
+      <!-- Other unchanged -->
       <label class="block font-semibold">Condition</label>
       <select id="condition" class="w-full border px-3 py-2 rounded">
         <option>New</option>
@@ -66,27 +47,35 @@
         <option>Refurbished</option>
       </select>
 
-      <!-- Main Image URL -->
       <label class="block font-semibold">Main Image URL</label>
       <input type="url" id="imageUrl" placeholder="https://..." required class="w-full border px-3 py-2 rounded" />
 
-      <!-- Extra Image URLs (comma-separated) -->
       <label class="block font-semibold">Other Image URLs (comma-separated)</label>
       <input type="text" id="extraImages" placeholder="https://img1.jpg, https://img2.jpg" class="w-full border px-3 py-2 rounded" />
 
-      <!-- Specs -->
       <label class="block font-semibold">Specifications</label>
       <textarea id="specifications" placeholder="Battery: 5000mAh, RAM: 8GB, Storage: 128GB" class="w-full border px-3 py-2 rounded"></textarea>
 
-      <!-- Upload Button -->
       <button type="submit" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg w-full">
         Upload Product
       </button>
     </form>
   </div>
 
+  <!-- Modal for Adding Brand -->
+  <div id="brandModal" class="fixed inset-0 bg-black bg-opacity-50 hidden justify-center items-center z-50">
+    <div class="bg-white p-6 rounded-lg w-full max-w-sm">
+      <h2 class="text-xl font-bold mb-4">➕ Add Brand</h2>
+      <input type="text" id="newBrandInput" placeholder="Brand name e.g. Itel" class="w-full border px-3 py-2 rounded mb-4"/>
+      <div class="flex justify-end space-x-2">
+        <button id="closeBrandModal" class="bg-gray-300 px-4 py-2 rounded">Cancel</button>
+        <button id="saveBrandBtn" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Save</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Firebase Config & Logic -->
   <script>
-    // ✅ NEW Firebase Config for ConceptDash
     const firebaseConfig = {
       apiKey: "AIzaSyB1geQ2jsqrAGw50NLnBncWvxCPD_n5Kqk",
       authDomain: "concept-dash-e1b60.firebaseapp.com",
@@ -96,9 +85,19 @@
       appId: "1:442954536333:web:143a03ca359ba3219bd9c4",
       measurementId: "G-RYXJVCDF9K"
     };
-
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
+
+    // Load brands from Firestore
+    const brandSelect = document.getElementById("brand");
+    async function loadBrands() {
+      const snapshot = await db.collection("brands").orderBy("name").get();
+      brandSelect.innerHTML = '<option value="">Select Brand</option>';
+      snapshot.forEach(doc => {
+        const brand = doc.data().name;
+        brandSelect.innerHTML += `<option>${brand}</option>`;
+      });
+    }
 
     // Submit Product
     document.getElementById("productForm").addEventListener("submit", async (e) => {
@@ -111,13 +110,11 @@
       const brand = document.getElementById("brand").value;
       const condition = document.getElementById("condition").value;
       const imageUrl = document.getElementById("imageUrl").value.trim();
-      const extraImagesRaw = document.getElementById("extraImages").value.trim();
-      const specifications = document.getElementById("specifications").value.trim();
-
-      const extraImages = extraImagesRaw
+      const extraImages = document.getElementById("extraImages").value
         .split(',')
-        .map(url => url.trim())
-        .filter(url => url.length > 0);
+        .map(x => x.trim())
+        .filter(x => x);
+      const specifications = document.getElementById("specifications").value.trim();
 
       const product = {
         name,
@@ -141,6 +138,26 @@
         alert("❌ Failed to upload product.");
       }
     });
+
+    // Brand modal controls
+    const brandModal = document.getElementById("brandModal");
+    document.getElementById("manageBrandsBtn").onclick = () => {
+      brandModal.classList.remove("hidden");
+    };
+    document.getElementById("closeBrandModal").onclick = () => {
+      brandModal.classList.add("hidden");
+    };
+    document.getElementById("saveBrandBtn").onclick = async () => {
+      const brandName = document.getElementById("newBrandInput").value.trim();
+      if (!brandName) return alert("Brand name required!");
+      await db.collection("brands").add({ name: brandName });
+      document.getElementById("newBrandInput").value = "";
+      brandModal.classList.add("hidden");
+      loadBrands(); // refresh dropdown
+      alert(`✅ Brand "${brandName}" added!`);
+    };
+
+    // Load brands initially
+    loadBrands();
   </script>
-</body>
-  </html>
+  </body>
