--- a/add.html
+++ b/add.html
@@ -1,140 +1,122 @@
 <!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Panel - Accessories Site</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background-color: #f5f5f5;
-    }
-    h1, h2 {
-      color: #333;
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-    }
-    input, select, button {
-      margin-top: 5px;
-      padding: 8px;
-      width: 100%;
-      max-width: 400px;
-    }
-    .product-card, .brand-item {
-      background-color: white;
-      margin-top: 10px;
-      padding: 10px;
-      border-radius: 5px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-    }
-    .flex {
-      display: flex;
-      gap: 20px;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin Panel - Accessories</title>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <h1>Admin Dashboard</h1>  <h2>Add Brand</h2>
-  <label>Brand Name</label>
-  <input type="text" id="brandName">
-  <button onclick="addBrand()">Add Brand</button>  <h2>Add Product</h2>
-  <label>Product Name</label>
-  <input type="text" id="productName"><label>Price</label> <input type="number" id="productPrice">
+<body class="bg-gray-100 text-gray-800 p-4">
+  <h1 class="text-3xl font-bold mb-4">Admin Panel - Accessories</h1>  <div class="grid md:grid-cols-2 gap-6">
+    <!-- Brand Form -->
+    <div class="bg-white p-4 rounded-xl shadow">
+      <h2 class="text-xl font-semibold mb-2">Add Brand</h2>
+      <input type="text" id="brandName" placeholder="Brand Name" class="border p-2 w-full mb-2 rounded" />
+      <button onclick="addBrand()" class="bg-blue-600 text-white px-4 py-2 rounded">Add Brand</button>
+    </div><!-- Product Form -->
+<div class="bg-white p-4 rounded-xl shadow">
+  <h2 class="text-xl font-semibold mb-2">Add Product</h2>
+  <input type="text" id="productName" placeholder="Product Name" class="border p-2 w-full mb-2 rounded" />
+  <input type="text" id="productPrice" placeholder="Price" class="border p-2 w-full mb-2 rounded" />
+  <input type="text" id="productImage" placeholder="Image URL" class="border p-2 w-full mb-2 rounded" />
+  <select id="productBrand" class="border p-2 w-full mb-2 rounded"></select>
+  <textarea id="productDesc" placeholder="Description" class="border p-2 w-full mb-2 rounded"></textarea>
+  <button onclick="addProduct()" class="bg-green-600 text-white px-4 py-2 rounded">Add Product</button>
+</div>
 
-<label>Description</label> <input type="text" id="productDesc">
+  </div>  <!-- Product List -->  <div class="mt-6 bg-white p-4 rounded-xl shadow">
+    <h2 class="text-xl font-semibold mb-4">All Products</h2>
+    <div id="productList" class="grid gap-4 md:grid-cols-3"></div>
+  </div>  <script>
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+    import {
+      getFirestore,
+      collection,
+      addDoc,
+      getDocs,
+      onSnapshot,
+      doc,
+      updateDoc,
+      deleteDoc
+    } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
 
-<label>Brand</label> <select id="brandSelect"></select>
-
-<label>Image</label> <input type="file" id="productImage"> <button onclick="addProduct()">Add Product</button>
-
-  <h2>All Products</h2>
-  <div id="productList"></div>  <!-- Firebase SDK -->  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage.js"></script>  <script>
     const firebaseConfig = {
       apiKey: "AIzaSyB1geQ2jsqrAGw50NLnBncWvxCPD_n5Kqk",
-      authDomain: "concept-dash-e1b60.firebaseapp.com",
-      projectId: "concept-dash-e1b60",
-      storageBucket: "concept-dash-e1b60.appspot.com",
-      messagingSenderId: "370747076258",
-      appId: "1:370747076258:web:fe2debe01d8a36799a4f3a"
+      authDomain: "food-ae7ff.firebaseapp.com",
+      projectId: "food-ae7ff",
+      storageBucket: "food-ae7ff.appspot.com",
+      messagingSenderId: "51623531214",
+      appId: "1:51623531214:web:8d73e755e85ed925b861db"
     };
 
-    const app = firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-    const storage = firebase.storage();
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-    const brandSelect = document.getElementById("brandSelect");
-    const productList = document.getElementById("productList");
-
-    async function loadBrands() {
-      brandSelect.innerHTML = '';
-      const snapshot = await db.collection("brands").get();
-      snapshot.forEach(doc => {
-        const option = document.createElement("option");
-        option.value = doc.id;
-        option.textContent = doc.data().name;
-        brandSelect.appendChild(option);
-      });
-    }
+    const brandSelect = document.getElementById("productBrand");
 
     async function addBrand() {
-      const name = document.getElementById("brandName").value;
-      if (!name.trim()) return;
-      await db.collection("brands").add({ name });
-      document.getElementById("brandName").value = '';
-      loadBrands();
+      const brand = document.getElementById("brandName").value.trim();
+      if (brand === "") return alert("Enter brand name");
+      await addDoc(collection(db, "brands"), { name: brand });
+      document.getElementById("brandName").value = "";
+    }
+
+    async function loadBrands() {
+      const brandsSnap = await getDocs(collection(db, "brands"));
+      brandSelect.innerHTML = "";
+      brandsSnap.forEach(doc => {
+        const opt = document.createElement("option");
+        opt.value = doc.data().name;
+        opt.textContent = doc.data().name;
+        brandSelect.appendChild(opt);
+      });
     }
 
     async function addProduct() {
-      const name = document.getElementById("productName").value;
-      const price = parseFloat(document.getElementById("productPrice").value);
-      const desc = document.getElementById("productDesc").value;
-      const brandId = document.getElementById("brandSelect").value;
-      const file = document.getElementById("productImage").files[0];
-      if (!file || !name || !brandId) return;
-
-      const storageRef = storage.ref(`products/${Date.now()}_${file.name}`);
-      await storageRef.put(file);
-      const imageUrl = await storageRef.getDownloadURL();
-
-      await db.collection("products").add({
-        name,
-        price,
-        description: desc,
-        brandId,
-        imageUrl,
-        timestamp: firebase.firestore.FieldValue.serverTimestamp()
+      const name = document.getElementById("productName").value.trim();
+      const price = document.getElementById("productPrice").value.trim();
+      const imageUrl = document.getElementById("productImage").value.trim();
+      const brand = brandSelect.value;
+      const description = document.getElementById("productDesc").value.trim();
+      if (!name || !price || !imageUrl || !brand) return alert("Fill all fields");
+      await addDoc(collection(db, "products"), {
+        name, price, imageUrl, brand, description
       });
-
-      document.getElementById("productName").value = '';
-      document.getElementById("productPrice").value = '';
-      document.getElementById("productDesc").value = '';
-      document.getElementById("productImage").value = '';
-      loadProducts();
+      document.getElementById("productName").value = "";
+      document.getElementById("productPrice").value = "";
+      document.getElementById("productImage").value = "";
+      document.getElementById("productDesc").value = "";
     }
 
     async function loadProducts() {
-      productList.innerHTML = '';
-      const snapshot = await db.collection("products").orderBy("timestamp", "desc").get();
-      for (const doc of snapshot.docs) {
-        const data = doc.data();
-        const brandDoc = await db.collection("brands").doc(data.brandId).get();
+      const productList = document.getElementById("productList");
+      productList.innerHTML = "";
+      const snapshot = await getDocs(collection(db, "products"));
+      snapshot.forEach(docSnap => {
+        const data = docSnap.data();
         const div = document.createElement("div");
-        div.className = 'product-card';
+        div.className = "border p-2 rounded shadow";
         div.innerHTML = `
-          <strong>${data.name}</strong> (${brandDoc.exists ? brandDoc.data().name : 'Unknown'})<br>
-          Ksh ${data.price}<br>
-          ${data.description}<br>
-          <img src="${data.imageUrl}" width="100">
+          <img src="${data.imageUrl}" class="w-full h-48 object-cover rounded mb-2" />
+          <h3 class="text-lg font-bold">${data.name}</h3>
+          <p>Brand: ${data.brand}</p>
+          <p>KES ${data.price}</p>
+          <p class="text-sm">${data.description}</p>
+          <button onclick="deleteProduct('${docSnap.id}')" class="mt-2 text-red-600">Delete</button>
         `;
         productList.appendChild(div);
-      }
+      });
     }
 
-    window.onload = async () => {
-      await loadBrands();
-      await loadProducts();
+    async function deleteProduct(id) {
+      await deleteDoc(doc(db, "products", id));
+      loadProducts();
     }
+
+    window.addEventListener("load", () => {
+      loadBrands();
+      loadProducts();
+    });
   </script></body>
-  </html>
+</html>
