--- a/cart.html
+++ b/cart.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ConceptDash - Cart</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Your Cart</title>
+  
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -12,110 +12,112 @@
       theme: {
         extend: {
           colors: {
-            primary: '#e63946'
-          },
-          borderRadius: {
-            button: '8px'
-          },
-          fontFamily: {
-            pacifico: ['Pacifico', 'cursive']
+            primary: '#1E293B',
+            accent: '#EAB308',
           }
         }
       }
-    }
+    };
   </script>
 
-  <!-- Fonts & Icons -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" />
-
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>
-
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="styles.css" />
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 </head>
 
-<body class="bg-gray-50">
+<body class="bg-black bg-opacity-70 backdrop-blur-sm flex items-center justify-center min-h-screen p-4 text-white">
 
-  <!-- Header -->
-  <header class="fixed top-0 left-0 right-0 bg-white shadow-md z-50">
-    <div class="container mx-auto px-4 py-3 flex items-center justify-between">
-      <a href="index.html" class="text-xl font-bold text-primary font-pacifico">ConceptDash</a>
-      <nav class="flex space-x-6 text-sm items-center">
-        <a href="index.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-home-line mr-1"></i>Home</a>
-        <a href="catgry.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-apps-line mr-1"></i>Categories</a>
-        <a href="add.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-add-line mr-1"></i>Add Item</a>
-        <a href="cart.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-shopping-cart-line mr-1"></i>Cart</a>
-        <a href="auth.html" class="flex items-center text-gray-700 hover:text-primary"><i class="ri-user-line mr-1"></i>Login</a>
-      </nav>
+  <!-- Cart Popup -->
+  <div class="bg-white text-black w-full max-w-lg p-6 rounded-xl shadow-2xl relative z-50">
+    <h2 class="text-2xl font-bold mb-4 text-center">🛒 Your Cart</h2>
+
+    <div id="cart-items" class="space-y-4 max-h-96 overflow-y-auto"></div>
+
+    <div class="mt-6 border-t pt-4">
+      <div class="flex justify-between font-semibold text-lg">
+        <span>Total:</span>
+        <span id="total-price">Ksh 0</span>
+      </div>
+
+      <button 
+  onclick="goToCheckout()" 
+  class="w-full mt-4 bg-accent text-black font-bold py-2 rounded hover:bg-yellow-400 transition flex items-center justify-center gap-2">
+  <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-1.6 8M17 13l1.6 8M9 21h6" />
+  </svg>
+  Checkout
+</button>
+
     </div>
-  </header>
 
-  <!-- Main Cart Content -->
-  <main class="pt-24 px-4 max-w-4xl mx-auto">
-    <h1 class="text-2xl font-semibold text-gray-800 mb-6">🛒 Your Cart</h1>
+    <!-- Close button -->
+    <button onclick="closeCart()" class="absolute top-4 right-4 text-gray-500 hover:text-red-600 text-xl font-bold">×</button>
+  </div>
 
-    <div id="cart-container" class="space-y-4"></div>
-
-    <div id="cart-total" class="text-right text-lg font-bold mt-6"></div>
-
-    <div class="text-right mt-4">
-      <a href="checkout.html" id="checkout-btn" class="bg-green-600 text-white px-6 py-2 rounded-button hover:bg-green-700 inline-block">
-        Proceed to Checkout
-      </a>
-    </div>
-  </main>
-
-  <!-- Footer -->
-  <footer class="bg-white text-center py-4 text-sm text-gray-600 mt-10">
-    &copy; 2025 ConceptDash. All rights reserved.
-  </footer>
-
-  <!-- Cart Script -->
   <script>
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    const container = document.getElementById('cart-container');
-    const totalDisplay = document.getElementById('cart-total');
-    const checkoutBtn = document.getElementById("checkout-btn");
+    // Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyB1geQ2jsqrAGw50NLnBncWvxCPD_n5Kqk",
+      authDomain: "concept-dash-e1b60.firebaseapp.com",
+      projectId: "concept-dash-e1b60",
+      storageBucket: "concept-dash-e1b60.appspot.com",
+      messagingSenderId: "440846244731",
+      appId: "1:440846244731:web:bf066fd06314a3a9c6e2cc"
+    };
 
-    let total = 0;
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
-    if (cart.length === 0) {
-      container.innerHTML = `<p class="text-gray-600">Your cart is empty.</p>`;
-      checkoutBtn.classList.add("hidden");
-    } else {
-      cart.forEach((item, index) => {
-        const subtotal = item.price * item.quantity;
-        total += subtotal;
+    const cartItemsContainer = document.getElementById('cart-items');
+    const totalPriceEl = document.getElementById('total-price');
 
-        const itemHTML = `
-          <div class="bg-white rounded-lg shadow p-4 flex gap-4 items-center">
-            <img src="${item.image}" alt="${item.name}" class="w-20 h-20 object-cover rounded">
-            <div class="flex-1">
-              <h2 class="text-lg font-semibold text-gray-800">${item.name}</h2>
-              <p class="text-sm text-gray-600">KES ${item.price.toFixed(2)} x ${item.quantity}</p>
-              <p class="text-sm font-bold text-gray-800">Subtotal: KES ${subtotal.toFixed(2)}</p>
+    // Load cart items
+    function fetchCartItems() {
+      db.collection('cart').onSnapshot(snapshot => {
+        cartItemsContainer.innerHTML = '';
+        let total = 0;
+
+        snapshot.forEach(doc => {
+          const item = doc.data();
+          total += Number(item.price);
+
+          const card = document.createElement('div');
+          card.className = "bg-gray-100 p-4 rounded flex justify-between items-center";
+
+          card.innerHTML = `
+            <div>
+              <h3 class="font-semibold text-lg">${item.name}</h3>
+              <p class="text-sm text-gray-600">Ksh ${item.price}</p>
             </div>
-            <button onclick="removeItem(${index})" class="text-red-600 hover:underline text-sm">Remove</button>
-          </div>
-        `;
-        container.innerHTML += itemHTML;
+            <button class="text-red-500 hover:text-red-700 font-bold remove-btn" data-id="${doc.id}">×</button>
+          `;
+
+          cartItemsContainer.appendChild(card);
+        });
+
+        totalPriceEl.textContent = `Ksh ${total}`;
+
+        // Attach remove button listeners
+        document.querySelectorAll('.remove-btn').forEach(button => {
+          button.addEventListener('click', () => {
+            const id = button.getAttribute('data-id');
+            db.collection('cart').doc(id).delete();
+          });
+        });
       });
+    }
+    function goToCheckout() {
+  window.location.href = "checkout.html";
+}
 
-      totalDisplay.innerText = `Total: KES ${total.toFixed(2)}`;
+
+    function closeCart() {
+      window.location.href = "index.html";
     }
 
-    function removeItem(index) {
-      cart.splice(index, 1);
-      localStorage.setItem('cart', JSON.stringify(cart));
-      location.reload();
-    }
+    fetchCartItems();
   </script>
-
 </body>
 </html>
