--- a/brand.html
+++ b/brand.html
@@ -1,3 +1,5 @@
+</body>
+</html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Brand Products - ConceptDash</title>
 
-  <!-- Tailwind & Fonts -->
+  <!-- Tailwind CSS & Fonts -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" />
@@ -16,7 +18,7 @@
     .bg-primary { background-color: #e63946; }
   </style>
 
-  <!-- Firebase -->
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
 </head>
@@ -77,6 +79,14 @@
         const card = document.createElement("div");
         card.className = "bg-white rounded-xl shadow-lg p-4 hover:shadow-2xl transition";
 
+        let specs = "";
+        if (data.brand) specs += `<p class="text-gray-600 text-sm mb-1"><strong>Brand:</strong> ${data.brand}</p>`;
+        if (data.processor) specs += `<p class="text-gray-600 text-sm mb-1"><strong>Processor:</strong> ${data.processor}</p>`;
+        if (data.ram) specs += `<p class="text-gray-600 text-sm mb-1"><strong>RAM:</strong> ${data.ram}</p>`;
+        if (data.storage) specs += `<p class="text-gray-600 text-sm mb-1"><strong>Storage:</strong> ${data.storage}</p>`;
+        if (data.camera) specs += `<p class="text-gray-600 text-sm mb-1"><strong>Camera:</strong> ${data.camera}</p>`;
+        if (data.description) specs += `<p class="text-gray-600 text-sm mb-1"><strong>Description:</strong> ${data.description}</p>`;
+
         card.innerHTML = `
           <img src="${data.imageUrl || 'placeholder.jpg'}"
             alt="${data.name}"
@@ -84,12 +94,7 @@
             onclick="goToProduct('${data.id}')"
           />
           <h2 class="text-xl font-bold text-primary mb-1">${data.name}</h2>
-          <p class="text-gray-600 text-sm mb-1"><strong>Brand:</strong> ${data.brand}</p>
-          <p class="text-gray-600 text-sm mb-1"><strong>Processor:</strong> ${data.processor || 'N/A'}</p>
-          <p class="text-gray-600 text-sm mb-1"><strong>RAM:</strong> ${data.ram || 'N/A'}</p>
-          <p class="text-gray-600 text-sm mb-1"><strong>Storage:</strong> ${data.storage || 'N/A'}</p>
-          <p class="text-gray-600 text-sm mb-1"><strong>Camera:</strong> ${data.camera || 'N/A'}</p>
-          <p class="text-gray-600 text-sm mb-1"><strong>Description:</strong> ${data.description || 'N/A'}</p>
+          ${specs}
           <p class="text-green-600 font-bold mt-2">KES ${data.price}</p>
           <div class="mt-4 flex space-x-2">
             <button onclick="addToCart('${data.id}', '${data.name}', ${data.price})"
@@ -154,4 +159,4 @@
     window.goToProduct = goToProduct;
   </script>
 </body>
-</html>
+  </html>
