--- a/add.html
+++ b/add.html
@@ -59,6 +59,7 @@
           <option value="Infinix">Infinix</option>
           <option value="Tecno">Tecno</option>
           <option value="Xiaomi">Xiaomi</option>
+          <option value="Vivo">Vivo</option>
         </select>
       </div><!-- Processor -->
 <div>
